--- a/css/style.css
+++ b/css/style.css
@@ -63,10 +63,86 @@ figcaption {
   color: red;
 }
 
+/* MEDIA */
+img, video, audio {
+  max-width: 100%;
+}
+
 /* LAYOUT */
 
 .wrapper {
   width: 960px;
-  background-color: grey;
   margin: 0 auto;
+}
+
+.col-1 {
+  float: left;
+  width: 32%;
+  padding: 2%;
+  background: #D3D3D3;
+}
+
+.col-2 {
+  float: left;
+  width: 64%;
+  padding: 2%;
+  background: #D3D3D3;
+}
+
+.col-3 {
+  background: #D3D3D3;
+  padding: 2%;
+  clear: both;
+}
+
+[class*="col-"] {
+  margin-left: 2%;
+  margin-bottom: 2%;
+}
+
+.first {
+  margin-left: 0%;
+}
+
+.clearfix:after {
+    content: ".";
+    display: block;
+    clear: both;
+    visibility: hidden;
+    height: 0;
+    line-height: 0;
+}
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #fff;
+  z-index: 1;
+}
+
+/* SECTIONS */
+section {
+  padding: 20px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+/* SOCIAL SEcTION */
+#social {
+  position: fixed;
+  top: 200px;
+  right: 20px;
+  width: 40px;
+  z-index: 1;
+}
+
+#social a {
+  display:block;
+  width: 40px;
+  height: 40px;
+  background: yellow;
 }
